<?xml version="1.0"?>
<package format="2">
  <name>quanergy_client_ros</name>
  <version>3.1.1</version>
  <description>The quanergy_client_ros package provides a ROS driver for Quanergy sensors</description>
  <maintainer email="ross.taylor@quanergy.com">Ross Taylor</maintainer>
  <license>Copyright 2014- Quanergy Systems Inc.</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libflann-dev</build_depend>

  <depend>angles</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
</package>
